--- a/templates/converter/index.html.twig
+++ b/templates/converter/index.html.twig
@@ -3,18 +3,32 @@
 {% block title %}Hello ConverterController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container">
+        <main>
+            <div class="py-5 text-center">
+                <img class="d-block mx-auto mb-4" src="/images/convert.png" alt="" width="100"
+                     height=100>
+                <h2>Конвертер валют</h2>
+                <p class="lead">Конвертируйте ваши сбережения</p>
+            </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            <div class="row g-5">
+               <div class="col-6">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/symfony_projects/converter/src/Controller/ConverterController.php'|file_link(0) }}">src/Controller/ConverterController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/symfony_projects/converter/templates/converter/index.html.twig'|file_link(0) }}">templates/converter/index.html.twig</a></code></li>
-    </ul>
-</div>
+               </div>
+                <div class="col-6">
+
+                </div>
+            </div>
+        </main>
+
+        <footer class="my-5 pt-5 text-muted text-center text-small">
+            <p class="mb-1">© 2017–2021 Company Name</p>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Privacy</a></li>
+                <li class="list-inline-item"><a href="#">Terms</a></li>
+                <li class="list-inline-item"><a href="#">Support</a></li>
+            </ul>
+        </footer>
+    </div>
 {% endblock %}
