--- a/templates/converter/index.html.twig
+++ b/templates/converter/index.html.twig
@@ -13,11 +13,46 @@
             </div>
 
             <div class="row g-5">
-               <div class="col-6">
-
-               </div>
                 <div class="col-6">
+                    <div class="d-flex justify-content-end">
+                        <input name="from" class="form-control mb-3 w-50 " type="number"
+                               placeholder="Default input" aria-label="default input example">
+                    </div>
+                    <div class="d-flex justify-content-end">
 
+                        <div class="btn-group" role="group"
+                             aria-label="Basic radio toggle button group">
+                            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off"
+                                   checked>
+                            <label class="btn btn-outline-primary" for="btnradio1">Radio 1</label>
+
+                            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                            <label class="btn btn-outline-primary" for="btnradio2">Radio 2</label>
+
+                            <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                            <label class="btn btn-outline-primary" for="btnradio3">Radio 3</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div>
+                        <input name="to" class="form-control mb-3 w-50" type="number" placeholder="Default input"
+                               aria-label="default input example">
+                    </div>
+                    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                        <input type="radio" class="btn-check" name="btnradio-to" id="btnradio-to1" autocomplete="off"
+                               checked>
+                        <label class="btn btn-outline-primary" for="btnradio-to1">Radio 1</label>
+
+                        <input type="radio" class="btn-check" name="btnradio-to" id="btnradio-to2" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio-to2">Radio 2</label>
+
+                        <input type="radio" class="btn-check" name="btnradio-to" id="btnradio-to3" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="btnradio-to3">Radio 3</label>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <p class="lead">Дата Синхронизации</p>
                 </div>
             </div>
         </main>
