--- a/templates/converter/index.html.twig
+++ b/templates/converter/index.html.twig
@@ -9,61 +9,59 @@
                 <img class="d-block mx-auto mb-4" src="/images/convert.png" alt="" width="100"
                      height=100>
                 <h2>Конвертер валют</h2>
-                <p class="lead">Конвертируйте ваши сбережения</p>
+                <p class="lead">Конвертируйте ваши сбережения, если они у вас есть.</p>
             </div>
 
-            <div class="row g-5">
+            <div id="converter-app" class="row g-5">
                 <div class="col-6">
                     <div class="d-flex justify-content-end">
-                        <input name="from" class="form-control mb-3 w-50 " type="number"
-                               placeholder="Default input" aria-label="default input example">
+                        <input name="from" class="form-control mb-3 w-50 " type="number" v-model="from"
+                               min="0" aria-label="default input example">
                     </div>
                     <div class="d-flex justify-content-end">
 
                         <div class="btn-group" role="group"
                              aria-label="Basic radio toggle button group">
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off"
-                                   checked>
-                            <label class="btn btn-outline-primary" for="btnradio1">Radio 1</label>
+                            {% for currency in currencies %}
+                                <input v-model="currency_from" type="radio" class="btn-check" name="currency-from"
+                                       id="currency-from-{{ currency.id }}" autocomplete="off"
+                                       value="{{ currency.code }}"
+                                       v-model="currency_from"
+                                        {% if loop.first %} checked {% endif %}>
+                                <label class="btn btn-outline-primary" for="currency-from-{{ currency.id }}"
+                                       title="{{ currency.title }}">{{ currency.code }}</label>
+                            {% endfor %}
 
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                            <label class="btn btn-outline-primary" for="btnradio2">Radio 2</label>
-
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                            <label class="btn btn-outline-primary" for="btnradio3">Radio 3</label>
                         </div>
                     </div>
                 </div>
                 <div class="col-6">
                     <div>
-                        <input name="to" class="form-control mb-3 w-50" type="number" placeholder="Default input"
+                        <input name="to" class="form-control mb-3 w-50" type="number" step='0.01'
+                               v-model="to"
                                aria-label="default input example">
                     </div>
                     <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                        <input type="radio" class="btn-check" name="btnradio-to" id="btnradio-to1" autocomplete="off"
-                               checked>
-                        <label class="btn btn-outline-primary" for="btnradio-to1">Radio 1</label>
-
-                        <input type="radio" class="btn-check" name="btnradio-to" id="btnradio-to2" autocomplete="off">
-                        <label class="btn btn-outline-primary" for="btnradio-to2">Radio 2</label>
-
-                        <input type="radio" class="btn-check" name="btnradio-to" id="btnradio-to3" autocomplete="off">
-                        <label class="btn btn-outline-primary" for="btnradio-to3">Radio 3</label>
+                        {% for currency in currencies %}
+                            <input v-model="currency_to" type="radio" class="btn-check" name="currency-to"
+                                   id="currency-to-{{ currency.id }}"
+                                   autocomplete="off"
+                                   value="{{ currency.code }}"
+                                   v-model="currency_to"
+                                    {% if loop.first %} checked {% endif %}>
+                            <label class="btn btn-outline-primary" for="currency-to-{{ currency.id }}"
+                                   title="{{ currency.title }}">{{ currency.code }}</label>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="text-center">
-                    <p class="lead">Дата Синхронизации</p>
+                    <p class="lead sync-date">{{ "{{ date }}" }}</p>
                 </div>
             </div>
         </main>
 
         <footer class="my-5 pt-5 text-muted text-center text-small">
-            <p class="mb-1">© 2017–2021 Company Name</p>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Privacy</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Support</a></li>
-            </ul>
+            <p class="mb-1">©2021 Василий Костюк</p>
         </footer>
     </div>
 {% endblock %}
